Remove unused id and change class name to be more meaningfull

--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
                     </h2>
                 </div>
             </section>
-            <section>
+            <section id="about us">
                 <div class="section-pic-description">
                     <div class="picholder">
-                        <div class="inner-picholder">
+                        <div class="picholder-inner">
                             <img src="assets/images/index/smiley-teacher-classroom.jpg" class="section-image"
                             alt="Teacher smiling in a classroom with 3 students">
                         </div>
@@ -75,8 +75,8 @@
                 </div>
             </section>
             <!-- Reasons -->
-            <section>
-                <div class="section-title" id="reasons">
+            <section id="reasons">
+                <div class="section-title">
                     <h2 class="nested">
                         <span class="headline">Why learn English with us?</span>
                     </h2>
@@ -85,8 +85,8 @@
                     <div class="section-container-inner">
                         <!-- Wrap first two reason boxes -->
                     <div class="wrap-two">
-                        <div class="reasons-box">
-                            <div class="reasons-colour-box shape-circle" id="reasons-colour-box-care">
+                        <div class="reasons-courses-box">
+                            <div class="reasons-colour-box" id="reasons-colour-box-care">
                                 <div class="icon-box-container">
                                     <div class="icon-box-wrapper">
                                         <div class="icon-box">
@@ -109,8 +109,8 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="reasons-box">
-                            <div class="reasons-colour-box shape-circle" id="reasons-colour-box-expert">
+                        <div class="reasons-courses-box">
+                            <div class="reasons-colour-box" id="reasons-colour-box-expert">
                                 <div class="icon-box-container">
                                     <div class="icon-box-wrapper">
                                         <div class="icon-box">
@@ -135,7 +135,7 @@
                         </div>
                          </div>
                          <!-- End of wrap two -->
-                        <div class="reasons-box" id="inverted-pyramid">
+                        <div class="reasons-courses-box">
                             <div class="reasons-colour-box shape-circle" id="reasons-colour-box-location">
                                 <div class="icon-box-container">
                                     <div class="icon-box-wrapper">
@@ -161,18 +161,18 @@
                         </div>
                     </div>
                 </section>
-                <section>
-                    <div class="section-title" id="about-us">
+                <!-- Courses Overview -->
+                <section id="courses">
+                    <div class="section-title">
                         <h2 class="nested">
                             <span class="headline">Courses overview</span>
                         </h2>
                     </div>
                 </section>
-                <!-- Courses Overview -->
                 <section class="section-container" id="courses-container">
                     <div class="section-container-inner courses-container">
-                        <div class="reasons-box courses-box">
-                            <div class="reasons-colour-box courses-colour-box shape-circle" id="courses-colour-box-infant">
+                        <div class="reasons-courses-box">
+                            <div class="reasons-colour-box courses-colour-box" id="courses-colour-box-infant">
                                 <div class="image-box-container">
                                     <div class="image-box-container-inner">
                                         <img src="assets/images/index/infant-courses.jpg" class="courses-image" alt="Child is holding pencil in a classroom">
@@ -187,7 +187,7 @@
                                     <div class="courses-day-icon-content-container">
                                         <div class="courses-day-icon-content-container-inner">
                                             <div class="courses-day-icon-container">
-                                                <img src="assets/images/icon/calendar-icon.png" class="courses-day-icon" alt="Red calendar icon">
+                                                <img src="assets/images/icon/calendar-icon.png" class="courses-icon" alt="Red calendar icon">
                                             </div>
                                             <div calss="courses-day-content">
                                                 <p>Monday to Friday</p>
@@ -197,7 +197,7 @@
                                     <div class="courses-day-icon-content-container">
                                         <div class="courses-day-icon-content-container-inner courses-time">
                                             <div class="courses-day-icon-container courses-time-inner">
-                                                <img src="assets/images/icon/hourglass.png" class="courses-day-icon courses-time-icon" alt="Brown hourglass">
+                                                <img src="assets/images/icon/hourglass.png" class="courses-icon" alt="Brown hourglass">
                                             </div>
                                             <div calss="courses-day-content">
                                                 <p>9am to 12pm</p>
@@ -207,7 +207,7 @@
                                     <div class="courses-day-icon-content-container">
                                         <div class="courses-day-icon-content-container-inner courses-age">
                                             <div class="courses-day-icon-container courses-age-inner">
-                                                <img src="assets/images/icon/age-group.png" class="courses-day-icon courses-age-icon" alt="Four children">
+                                                <img src="assets/images/icon/age-group.png" class="courses-icon" alt="Four children">
                                             </div>
                                             <div calss="courses-day-content">
                                                 <p>Age Range: 2 - 4</p>
@@ -222,8 +222,8 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="reasons-box courses-box">
-                            <div class="reasons-colour-box courses-colour-box shape-circle" id="courses-colour-box-teenagers">
+                        <div class="reasons-courses-box">
+                            <div class="reasons-colour-box courses-colour-box" id="courses-colour-box-teenagers">
                                 <div class="image-box-container">
                                     <div class="image-box-container-inner">
                                         <img src="assets/images/index/school-children-courses.jpg" class="courses-image" alt="Two children doing homework">
@@ -238,7 +238,7 @@
                                     <div class="courses-day-icon-content-container">
                                         <div class="courses-day-icon-content-container-inner">
                                             <div class="courses-day-icon-container">
-                                                <img src="assets/images/icon/calendar-icon.png" class="courses-day-icon" alt="Red calendar icon">
+                                                <img src="assets/images/icon/calendar-icon.png" class="courses-icon" alt="Red calendar icon">
                                             </div>
                                             <div calss="courses-day-content">
                                                 <p>Monday to Friday and Saturday</p>
@@ -248,7 +248,7 @@
                                     <div class="courses-day-icon-content-container">
                                         <div class="courses-day-icon-content-container-inner courses-time">
                                             <div class="courses-day-icon-container courses-time-inner">
-                                                <img src="assets/images/icon/hourglass.png" class="courses-day-icon courses-time-icon" alt="Brown hourglass">
+                                                <img src="assets/images/icon/hourglass.png" class="courses-icon" alt="Brown hourglass">
                                             </div>
                                             <div calss="courses-day-content">
                                                 <p>3pm to 5pm and 10am to 2pm Saturday</p>
@@ -258,7 +258,7 @@
                                     <div class="courses-day-icon-content-container">
                                         <div class="courses-day-icon-content-container-inner courses-age">
                                             <div class="courses-day-icon-container courses-age-inner">
-                                                <img src="assets/images/icon/age-group.png" class="courses-day-icon courses-age-icon" alt="Four children">
+                                                <img src="assets/images/icon/age-group.png" class="courses-icon" alt="Four children">
                                             </div>
                                             <div calss="courses-day-content">
                                                 <p>Age Range: 4 - 12</p>
@@ -289,7 +289,7 @@
                                     <div class="courses-day-icon-content-container">
                                         <div class="courses-day-icon-content-container-inner">
                                             <div class="courses-day-icon-container">
-                                                <img src="assets/images/icon/calendar-icon.png" class="courses-day-icon" alt="Red calendar icon">
+                                                <img src="assets/images/icon/calendar-icon.png" class="courses-icon" alt="Red calendar icon">
                                             </div>
                                             <div calss="courses-day-content">
                                                 <p>Monday to Friday</p>
@@ -299,7 +299,7 @@
                                     <div class="courses-day-icon-content-container">
                                         <div class="courses-day-icon-content-container-inner courses-time">
                                             <div class="courses-day-icon-container courses-time-inner">
-                                                <img src="assets/images/icon/hourglass.png" class="courses-day-icon courses-time-icon" alt="Brown hourglass">
+                                                <img src="assets/images/icon/hourglass.png" class="courses-icon" alt="Brown hourglass">
                                             </div>
                                             <div calss="courses-day-content">
                                                 <p>4pm to 8pm</p>
@@ -309,7 +309,7 @@
                                     <div class="courses-day-icon-content-container">
                                         <div class="courses-day-icon-content-container-inner courses-age">
                                             <div class="courses-day-icon-container courses-age-inner">
-                                                <img src="assets/images/icon/age-group.png" class="courses-day-icon courses-age-icon" alt="Four children">
+                                                <img src="assets/images/icon/age-group.png" class="courses-icon" alt="Four children">
                                             </div>
                                             <div calss="courses-day-content">
                                                 <p>Age Range: 4 - 16</p>
@@ -337,8 +337,8 @@
                             <h5>picture-gallery</h5>
                         </a>
                     </div>
-                <section>
-                    <div class="section-title" id="testimonials">
+                <section id="testimonials">
+                    <div class="section-title">
                         <h2 class="nested">
                             <span class="headline">Testimonials</span>
                         </h2>
