Add hidden header to Gallery page

--- a/picture-gallery.html
+++ b/picture-gallery.html
@@ -47,6 +47,7 @@
     <!-- Main Content -->
     <main>
         <section id="gallery">
+            <h2 class="hidden-heading">Picture-Gallery</h2>
             <div id="photos">
                 <img src="assets/images/gallery/boy-library.jpg" alt="Smiling boy in red cap in library">
                 <img src="assets/images/gallery/boys-classroom.jpg" alt="Three students raise hand in a classroom">
