Fix margin between second and third courses box

--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="reasons-box courses-box">
+                        <div class="reasons-courses-box courses-box">
                             <div class="reasons-colour-box courses-colour-box shape-circle" id="courses-colour-box-online">
                                 <div class="image-box-container">
                                     <div class="image-box-container-inner">
