Replace all images on index.html page to webp format

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <div class="section-pic-description">
                     <div class="picholder">
                         <div class="picholder-inner">
-                            <img src="assets/images/index/smiley-teacher-classroom.jpg" class="section-image"
+                            <img src="assets/images/index/smiley-teacher-classroom.webp" class="section-image"
                             alt="Teacher smiling in a classroom with 3 students">
                         </div>
                     </div>
@@ -175,7 +175,7 @@
                             <div class="reasons-colour-box courses-colour-box" id="courses-colour-box-infant">
                                 <div class="image-box-container">
                                     <div class="image-box-container-inner">
-                                        <img src="assets/images/index/infant-courses.jpg" class="courses-image" alt="Child is holding pencil in a classroom">
+                                        <img src="assets/images/index/infant-courses.webp" class="courses-image" alt="Child is holding pencil in a classroom">
                                     </div>
                                 </div>
                             </div>
@@ -226,7 +226,7 @@
                             <div class="reasons-colour-box courses-colour-box" id="courses-colour-box-teenagers">
                                 <div class="image-box-container">
                                     <div class="image-box-container-inner">
-                                        <img src="assets/images/index/school-children-courses.jpg" class="courses-image" alt="Two children doing homework">
+                                        <img src="assets/images/index/school-children-courses.webp" class="courses-image" alt="Two children doing homework">
                                     </div>
                                 </div>
                             </div>
@@ -277,7 +277,7 @@
                             <div class="reasons-colour-box courses-colour-box shape-circle" id="courses-colour-box-online">
                                 <div class="image-box-container">
                                     <div class="image-box-container-inner">
-                                        <img src="assets/images/index/online-courses.jpg" class="courses-image" alt="A girl is learning online and putting hand up">
+                                        <img src="assets/images/index/online-courses.webp" class="courses-image" alt="A girl is learning online and putting hand up">
                                     </div>
                                 </div>
                             </div>
