Fix link to gallery code

--- a/index.html
+++ b/index.html
@@ -331,12 +331,10 @@
                         <div id="circular-cover-bg"></div>
                     </div>
                 </section>
-                    <div id="link-to-gallery" >
-                        <a href="picture-gallery.html">
+                        <a id="link-to-gallery" href="picture-gallery.html">
                             <h2>A smile is understood all over the world.</h2>
                             <h5>picture-gallery</h5>
                         </a>
-                    </div>
                 <section id="testimonials">
                     <div class="section-title">
                         <h2 class="nested">
