Add hidden heading to in-page gallery link header

--- a/index.html
+++ b/index.html
@@ -330,7 +330,8 @@
                     <div id="thinking-kid-image">
                         <div id="circular-cover-bg"></div>
                     </div>
-                </section>
+                </section id="gallery-link">
+                    <h2 class="hidden-heading">Quote and Gallery</h2>
                         <a id="link-to-gallery" href="picture-gallery.html">
                             <h2>A smile is understood all over the world.</h2>
                             <h5>picture-gallery</h5>
