Fix code of find out more buttons

--- a/index.html
+++ b/index.html
@@ -214,11 +214,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="button-container">
-                                        <div class="button-container-inner">
-                                            <a href="courses-detail.html"><h5>Find out more</h5></a>
-                                        </div>
-                                    </div>
+                                    <a class="find-out-button hover-effect" href="courses-detail.html"><h5>Find out more</h5></a>
                                 </div>
                             </div>
                         </div>
@@ -265,11 +261,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="button-container">
-                                        <div class="button-container-inner">
-                                            <a href="courses-detail.html"><h5>Find out more</h5></a>
-                                        </div>
-                                    </div>
+                                    <a class="find-out-button hover-effect" href="courses-detail.html"><h5>Find out more</h5></a>
                                 </div>
                             </div>
                         </div>
@@ -316,11 +308,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="button-container">
-                                        <div class="button-container-inner">
-                                            <a href="courses-detail.html"><h5>Find out more</h5></a>
-                                        </div>
-                                    </div>
+                                    <a class="find-out-button hover-effect" href="courses-detail.html"><h5>Find out more</h5></a>
                                 </div>
                             </div>
                         </div>
@@ -331,7 +319,7 @@
                         <div id="circular-cover-bg"></div>
                     </div>
                 </section id="gallery-link">
-                    <h2 class="hidden-heading">Quote and Gallery</h2>
+                    <h2 class="hidden-heading hover-effect">Quote and Gallery</h2>
                         <a id="link-to-gallery" href="picture-gallery.html">
                             <h2>A smile is understood all over the world.</h2>
                             <h5>picture-gallery</h5>
