--- a/index.html
+++ b/index.html
@@ -319,8 +319,8 @@
                         <div id="circular-cover-bg"></div>
                     </div>
                 </section id="gallery-link">
-                    <h2 class="hidden-heading hover-effect">Quote and Gallery</h2>
-                        <a id="link-to-gallery" href="picture-gallery.html">
+                    <h2 class="hidden-heading">Quote and Gallery</h2>
+                        <a class="hover-effect" id="link-to-gallery" href="picture-gallery.html">
                             <h2>A smile is understood all over the world.</h2>
                             <h5>picture-gallery</h5>
                         </a>
