Fix code for back to home buttons and add hover effect

--- a/courses-detail.html
+++ b/courses-detail.html
@@ -49,9 +49,7 @@
         <div id="coming-soon">
             <h1 class="white">Coming Soon!</h1>
             <p class="white">Stay tuned with us</p>
-            <div id="back-to-home">
-                <a href="index.html"><h5>Back to Home</h5></a>
-            </div>
+            <a class="back-to-home hover-effect" href="index.html"><h5 class="hover-effect">Back to Home</h5></a>
         </div>
 
     </main>
