--- a/form-submit-acknowledge.html
+++ b/form-submit-acknowledge.html
@@ -48,10 +48,8 @@
     <main>
         <div id="coming-soon">
             <h1 class="white">Thank you!</h1>
-            <p class="white">Your submission is received and we will contact you soon.</h5>
-            <div id="back-to-home">
-                <a href="index.html"><h5>Back to Home</h5></a>
-            </div>
+            <p class="white">Your submission is received and we will contact you soon.</p>
+            <a class="back-to-home" href="index.html"><h5 class="hover-effect">Back to Home</h5></a>
         </div>
     </main>
     <!-- Footer -->
