Fix closing tag for nav and about us id

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <li><a href="picture-gallery.html">Picture-Gallery</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
-            <nav>
+        </nav>
     </header>
     <!-- Main Content -->
     <main>
@@ -60,7 +60,7 @@
                     </h2>
                 </div>
             </section>
-            <section id="about us">
+            <section id="about-us">
                 <div class="section-pic-description">
                     <div class="picholder">
                         <div class="picholder-inner">
