--- a/form-submit-acknowledge.html
+++ b/form-submit-acknowledge.html
@@ -42,7 +42,7 @@
                 <li><a href="picture-gallery.html">Picture-Gallery</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
-            <nav>
+        </nav>
     </header>
     <!-- Main Content -->
     <main>
