--- a/index.html
+++ b/index.html
@@ -53,14 +53,12 @@
         </section>
         <!-- About Us -->
         <div class="section-title-container">
-            <section>
+            <section id="about-us">
                 <div class="section-title" id="about-us">
                     <h2 class="nested">
                         <span class="headline">About us</span>
                     </h2>
                 </div>
-            </section>
-            <section id="about-us">
                 <div class="section-pic-description">
                     <div class="picholder">
                         <div class="picholder-inner">
@@ -102,7 +100,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="content-box" id="content-care">
+                            <div class="content-box">
                                 <div class="content-box-inner" id="content-box-inner-care">
                                     <p>We pride ourselves on creating a fun and friendly learning environment,
                                         and in getting to know all our students personally. </p>
@@ -179,8 +177,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="content-box" id="content-care">
-                                <div class="content-box-inner content-box-inner-courses" id="content-box-inner-care content-box-inner-infant">
+                            <div class="content-box">
+                                <div class="content-box-inner content-box-inner-courses">
                                     <h4>Courses for infants and children</h4>
                                     <p>Step by step! Learn English at a young age with lots of fun and enjoyment. 
                                         At our Kids English Club you will never be bored. </p>
@@ -189,9 +187,7 @@
                                             <div class="courses-day-icon-container">
                                                 <img src="assets/images/icon/calendar-icon.png" class="courses-icon" alt="Red calendar icon">
                                             </div>
-                                            <div calss="courses-day-content">
-                                                <p>Monday to Friday</p>
-                                            </div>
+                                            <p>Monday to Friday</p>
                                         </div>
                                     </div>
                                     <div class="courses-day-icon-content-container">
