Remove content care id

--- a/index.html
+++ b/index.html
@@ -195,9 +195,7 @@
                                             <div class="courses-day-icon-container courses-time-inner">
                                                 <img src="assets/images/icon/hourglass.png" class="courses-icon" alt="Brown hourglass">
                                             </div>
-                                            <div calss="courses-day-content">
-                                                <p>9am to 12pm</p>
-                                            </div>
+                                            <p>9am to 12pm</p>
                                         </div>
                                     </div>
                                     <div class="courses-day-icon-content-container">
@@ -205,9 +203,7 @@
                                             <div class="courses-day-icon-container courses-age-inner">
                                                 <img src="assets/images/icon/age-group.png" class="courses-icon" alt="Four children">
                                             </div>
-                                            <div calss="courses-day-content">
-                                                <p>Age Range: 2 - 4</p>
-                                            </div>
+                                            <p>Age Range: 2 - 4</p>
                                         </div>
                                     </div>
                                     <a class="find-out-button hover-effect" href="courses-detail.html"><h5>Find out more</h5></a>
@@ -222,7 +218,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="content-box" id="content-care">
+                            <div class="content-box">
                                 <div class="content-box-inner content-box-inner-courses" id="content-box-inner-care content-box-inner-teenagers">
                                     <h4>Courses for school children and teenagers</h4>
                                     <p>Learn without fear, pressure and stress. Our courses are fun, lively and practical. 
@@ -232,9 +228,7 @@
                                             <div class="courses-day-icon-container">
                                                 <img src="assets/images/icon/calendar-icon.png" class="courses-icon" alt="Red calendar icon">
                                             </div>
-                                            <div calss="courses-day-content">
-                                                <p>Monday to Friday and Saturday</p>
-                                            </div>
+                                            <p>Monday to Friday and Saturday</p>
                                         </div>
                                     </div>
                                     <div class="courses-day-icon-content-container">
@@ -242,9 +236,7 @@
                                             <div class="courses-day-icon-container courses-time-inner">
                                                 <img src="assets/images/icon/hourglass.png" class="courses-icon" alt="Brown hourglass">
                                             </div>
-                                            <div calss="courses-day-content">
-                                                <p>3pm to 5pm and 10am to 2pm Saturday</p>
-                                            </div>
+                                            <p>3pm to 5pm and 10am to 2pm Saturday</p>
                                         </div>
                                     </div>
                                     <div class="courses-day-icon-content-container">
@@ -252,9 +244,7 @@
                                             <div class="courses-day-icon-container courses-age-inner">
                                                 <img src="assets/images/icon/age-group.png" class="courses-icon" alt="Four children">
                                             </div>
-                                            <div calss="courses-day-content">
-                                                <p>Age Range: 4 - 12</p>
-                                            </div>
+                                            <p>Age Range: 4 - 12</p>
                                         </div>
                                     </div>
                                     <a class="find-out-button hover-effect" href="courses-detail.html"><h5>Find out more</h5></a>
@@ -269,7 +259,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="content-box" id="content-care">
+                            <div class="content-box">
                                 <div class="content-box-inner content-box-inner-courses" id="content-box-inner-care content-box-inner-online">
                                     <h4>Online lessons for children</h4>
                                     <p>Although you may not have the opportunity to attend our language school in person, 
@@ -279,9 +269,7 @@
                                             <div class="courses-day-icon-container">
                                                 <img src="assets/images/icon/calendar-icon.png" class="courses-icon" alt="Red calendar icon">
                                             </div>
-                                            <div calss="courses-day-content">
-                                                <p>Monday to Friday</p>
-                                            </div>
+                                            <p>Monday to Friday</p>
                                         </div>
                                     </div>
                                     <div class="courses-day-icon-content-container">
@@ -289,9 +277,7 @@
                                             <div class="courses-day-icon-container courses-time-inner">
                                                 <img src="assets/images/icon/hourglass.png" class="courses-icon" alt="Brown hourglass">
                                             </div>
-                                            <div calss="courses-day-content">
-                                                <p>4pm to 8pm</p>
-                                            </div>
+                                            <p>4pm to 8pm</p>
                                         </div>
                                     </div>
                                     <div class="courses-day-icon-content-container">
@@ -299,9 +285,7 @@
                                             <div class="courses-day-icon-container courses-age-inner">
                                                 <img src="assets/images/icon/age-group.png" class="courses-icon" alt="Four children">
                                             </div>
-                                            <div calss="courses-day-content">
-                                                <p>Age Range: 4 - 16</p>
-                                            </div>
+                                            <p>Age Range: 4 - 16</p>
                                         </div>
                                     </div>
                                     <a class="find-out-button hover-effect" href="courses-detail.html"><h5>Find out more</h5></a>
