Fix id value for corses content boxes

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                                 </div>
                             </div>
                             <div class="content-box">
-                                <div class="content-box-inner content-box-inner-courses" id="content-box-inner-care content-box-inner-teenagers">
+                                <div class="content-box-inner content-box-inner-courses" id="content-box-inner-teenagers">
                                     <h4>Courses for school children and teenagers</h4>
                                     <p>Learn without fear, pressure and stress. Our courses are fun, lively and practical. 
                                         The best possible preparation for secondary school</p>
@@ -260,7 +260,7 @@
                                 </div>
                             </div>
                             <div class="content-box">
-                                <div class="content-box-inner content-box-inner-courses" id="content-box-inner-care content-box-inner-online">
+                                <div class="content-box-inner content-box-inner-courses" id="content-box-inner-online">
                                     <h4>Online lessons for children</h4>
                                     <p>Although you may not have the opportunity to attend our language school in person, 
                                         this is not a reason to stop learning English.</p>
@@ -298,12 +298,14 @@
                     <div id="thinking-kid-image">
                         <div id="circular-cover-bg"></div>
                     </div>
-                </section id="gallery-link">
+                </section>
+                <section id="gallery-link">
                     <h2 class="hidden-heading">Quote and Gallery</h2>
                         <a class="hover-effect" id="link-to-gallery" href="picture-gallery.html">
                             <h2>A smile is understood all over the world.</h2>
                             <h5>picture-gallery</h5>
                         </a>
+                </section>
                 <section id="testimonials">
                     <div class="section-title">
                         <h2 class="nested">
