Change from id to class for testimonials boxes

--- a/index.html
+++ b/index.html
@@ -312,14 +312,14 @@
                             <span class="headline">Testimonials</span>
                         </h2>
                         <div id="testimonials-content-container">
-                            <div id="jo-blog">
+                            <div class="testimonials">
                                 <p class="testimonials-text">"For three years, we have enrolled our kids in the Kids English
                                     Club.
                                     We choose KEC because our kids can focus on speaking, reading,
                                     and writing in a native English language environment."</p>
                                 <p class="writer">Jo Blog, 2023</p>
                             </div>
-                            <div id="jo-blog">
+                            <div class="testimonials">
                                 <p class="testimonials-text">"As parents of two children who both attended Kids English Club,
                                     I can say without hesitation that we have been extremely happy with the lessons and
                                     teaching of
