Remove section circular image

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <!-- About Us -->
         <div class="section-title-container">
             <section id="about-us">
-                <div class="section-title" id="about-us">
+                <div class="section-title">
                     <h2 class="nested">
                         <span class="headline">About us</span>
                     </h2>
@@ -293,12 +293,10 @@
                             </div>
                         </div>
                     </div>
-                </section>
-                <section>
+                </section> 
                     <div id="thinking-kid-image">
                         <div id="circular-cover-bg"></div>
                     </div>
-                </section>
                 <section id="gallery-link">
                     <h2 class="hidden-heading">Quote and Gallery</h2>
                         <a class="hover-effect" id="link-to-gallery" href="picture-gallery.html">
