--- a/picture-gallery.html
+++ b/picture-gallery.html
@@ -42,7 +42,7 @@
                 <li><a href="picture-gallery.html" class="active">Picture-Gallery</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
-            <nav>
+        </nav>
     </header>
     <!-- Main Content -->
     <main>
@@ -59,7 +59,7 @@
                 <img src="assets/images/gallery/smiley-male-teacher.jpg" alt="Smiling male teacher holding a book">
                 <img src="assets/images/gallery/smiling-boy.jpg" alt="Smiling boy in front of a whiteboard">
                 <img src="assets/images/gallery/teeange-girl.jpg" alt="Smiling teenager girl wearing ornage headphone">
-                <img src="assets/images/gallery/two-smiley -boys.jpg" alt="Two boys holding a book over their heads and smiling">
+                <img src="assets/images/gallery/two-smiley-boys.jpg" alt="Two boys holding a book over their heads and smiling">
             </div>
         </section>
     </main>
