Remove inline style from iframe map

--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
                 <li><a href="picture-gallery.html">Picture-Gallery</a></li>
                 <li><a href="contact.html" class="active">Contact</a></li>
             </ul>
-            <nav>
+        </nav>
     </header>
     <!-- Main Content -->
     <main>
@@ -77,14 +77,14 @@
                 <input type="number" name="phone_number" id="phone-number" class="input-field" required>
                 <br>
                 <label for="message">Message:</label> 
-                <textarea name="message" id="message" cols="10" rows="10" id="message" required></textarea>
+                <textarea name="message" cols="10" rows="10" id="message" required></textarea>
                 <input class="send-button" type="submit" value="Send >>">
             </form>
         </section>
         <section id="map-contact">
             <div id="map-contact-wrapper">
-                <div id="map">
-                    <iframe id="map" src="https://bit.ly/3zfHsGF" width="100%" height="300"></iframe>
+                <div id="map-container">
+                    <iframe id="map" src="https://bit.ly/3zfHsGF"></iframe>
                 </div>
                 <div id="contact">
                     <p>Kids English Club</p>
