Add hidden heading to map

--- a/contact.html
+++ b/contact.html
@@ -82,6 +82,7 @@
             </form>
         </section>
         <section id="map-contact">
+            <h2 class="hidden-heading">Contact detail</h2>
             <div id="map-contact-wrapper">
                 <div id="map-container">
                     <iframe id="map" src="https://bit.ly/3zfHsGF"></iframe>
