Fix nav tag on courses detail page

--- a/courses-detail.html
+++ b/courses-detail.html
@@ -42,14 +42,14 @@
                 <li><a href="picture-gallery.html">Picture-Gallery</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
-            <nav>
+        </nav>
     </header>
     <!-- Main Content -->
     <main>
         <div id="coming-soon">
             <h1 class="white">Coming Soon!</h1>
             <p class="white">Stay tuned with us</p>
-            <a class="back-to-home hover-effect" href="index.html"><h5 class="hover-effect">Back to Home</h5></a>
+            <a class="back-to-home" href="index.html"><h5 class="hover-effect">Back to Home</h5></a>
         </div>
 
     </main>
