Fix id for link to courses on all html pages

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <ul id="menu">
                 <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="#about-us">About Us</a></li>
-                <li><a href="#courses-container">Courses</a></li>
+                <li><a href="#courses">Courses</a></li>
                 <li><a href="picture-gallery.html">Picture-Gallery</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
