--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
             <ul id="menu">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="index.html#about-us">About Us</a></li>
-                <li><a href="index.html#courses-container">Courses</a></li>
+                <li><a href="index.html#courses">Courses</a></li>
                 <li><a href="picture-gallery.html">Picture-Gallery</a></li>
                 <li><a href="contact.html" class="active">Contact</a></li>
             </ul>
